@startuml

title __AMCWardPanels.TableFrames.Discharge Package Diagram__\n


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Discharge {
          class AMCWardPanels.TableFrames.Discharge.DisTable {
              + DisTable()
          }
        }
      }
    }

  


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Discharge {
          class AMCWardPanels.TableFrames.Discharge.DisTableModel {
              + DisTableModel()
              + DisTableModel()
              + isCellEditable()
          }
        }
      }
    }


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Discharge {
          class AMCWardPanels.TableFrames.Discharge.DisTablePanel {
              - columnName : String[]
              - dbData : Object[][]
              - scrollPane : JScrollPane
              - table : JTable
              + DisTablePanel()
              + setupTable()
              + tableChanged()
              - editPatient()
          }
        }
      }
    }

  

  AMCWardPanels.TableFrames.Discharge.DisTableModel -up-|> AMCWardPanels.TableFrames.MyTableModel
  AMCWardPanels.TableFrames.Discharge.DisTablePanel .up.|> javax.swing.event.TableModelListener
  AMCWardPanels.TableFrames.Discharge.DisTablePanel -up-|> javax.swing.JPanel
  AMCWardPanels.TableFrames.Discharge.DisTablePanel o-- Methods.GeneralWard
  AMCWardPanels.TableFrames.Discharge.DisTablePanel o-- AMCWardPanels.TableFrames.Discharge.DisTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
